--- a/index.html
+++ b/index.html
@@ -126,33 +126,9 @@
                             </div>
                             <br>
                             <div class="nes-field is-inline">
-                                <label for="Edad">Edad:</label>
-                                <input id="Edad" name="Edad" type="number" required autocomplete="off"
-                                    class="nes-input is-dark" placeholder="Solo numeros">
-                            </div>
-                            <br>
-                            <div class="nes-field is-inline">
-                                <label for="Sexo">Sexo:</label>
-                                <input id="Sexo" name="Sexo" type="text" required autocomplete="off"
-                                    class="nes-input is-dark" placeholder="Sin espacios">
-                            </div>
-                            <br>
-                            <label for="VAK">Estilo de aprendizaje:</label>
-                            <div class="nes-select is-dark">
-                                <select id="VAK" required>
-                                    <option value="" disabled selected>Escoge un estilo...</option>
-                                    <option value="A">Auditivo </option>
-                                    <option value="K">Kinestesico </option>
-                                    <option value="V">Visual </option>
-                                </select>
-                            </div>
-                            <br>
-                            <hr>
-                            <br>
-                            <div class="nes-field is-inline">
                                 <label for="Nick">Nombre de Usuario:</label>
                                 <input id="Nick" name="Nick" type="text" required autocomplete="off"
-                                    class="nes-input is-dark" placeholder="Sin espacios" maxlength="7">
+                                    class="nes-input is-dark" placeholder="Sin espacios" maxlength="10">
                                 <!-- <span class="helper-text" data-error="wrong" data-success="right">Un alias, nombre de
                                     usuario o apodo que te identifique</span> -->
                             </div>
@@ -229,10 +205,7 @@
                                     <option value="B">1°B</option>
                                     <option value="C">1°C</option>
                                     <option value="D">1°D</option>
-                                    <option value="E">1°E</option>
-                                    <option value="F">1°F</option>
                                     <option value="G">1°G</option>
-                                    <option value="H">1°H</option>
                                     <!-- <option value="F">4°F</option> -->
                                 </select>
                             </div>
@@ -295,11 +268,7 @@
             Avatar,
             Equipo,
             Grupo,
-            ID,
-            Edad,
-            Sexo,
-            VAK;
-
+            ID;
         var ava2 = "";
         var array2 = [];
         var cuenta;
@@ -574,10 +543,10 @@
 
         var enviarDatos = function () {
             var url =
-                "https://script.google.com/macros/s/AKfycbytjShlTyE-y76mAM7591sbOIIkwZrb96YoyL8JE-tSa1v15yo5HzWV2fRZ5WNpHgwO/exec";
+                "https://script.google.com/macros/s/AKfycbySgbPVH21U7WY1BD-UGuy36g7ZlJvEZtlQ80pTVPu00rguEZs/exec";
             /*  Equipo = "SinEquipo"; */
             envioUrl = url + "?aP=" + ApellidoPaterno + "&aM=" + ApellidoMaterno + "&n=" + Nombre + "&nI=" + Nick +
-                "&a=" + Avatar + "&e=" + Equipo + "&g=" + Grupo + "&i=" + ID + "&eD=" + Edad + "&sX=" + Sexo + "&vak=" + VAK;
+                "&a=" + Avatar + "&e=" + Equipo + "&g=" + Grupo + "&i=" + ID;
             /* envioUrl = envioUrl.trim(); */
             var obj1 = {
                 "ApellidoPaterno": ApellidoPaterno,
@@ -587,10 +556,7 @@
                 "Avatar": Avatar,
                 "Equipo": Equipo,
                 "Grupo": Grupo,
-                "ID": ID,
-                "Edad": Edad,
-                "Sexo": Sexo,
-                "VAK": VAK
+                "ID": ID
             };
             obj.items.push(obj1);
 
@@ -609,12 +575,9 @@
                 document.getElementById("Avatar").value === "" ||
                 document.getElementById("Equipo").value === "" ||
                 document.getElementById("Grupo").value === "" ||
-                document.getElementById("ID").value === "" ||
-                document.getElementById("Edad").value === "" ||
-                document.getElementById("Sexo").value === "" ||
-                document.getElementById("VAK").value === "") {
+                document.getElementById("ID").value === "") {
 
-                alert("Llena los campos");
+                alert("llena los campos");
 
             } else {
 
@@ -626,14 +589,12 @@
                 Equipo = document.getElementById("Equipo").value;
                 Grupo = document.getElementById("Grupo").value;
                 ID = document.getElementById("ID").value;
-                Edad = document.getElementById("Edad").value;
-                Sexo = document.getElementById("Sexo").value;
-                VAK = document.getElementById("VAK").value;
                 enviarDatos();
                 var iframe = document.createElement('iframe');
                 var html = '';
-                iframe.src = envioUrl;
-                /* document.getElementById("contenido").appendChild(iframe); */
+                iframe.src = "";
+                /* iframe.src = envioUrl; */
+                document.getElementById("contenido").appendChild(iframe);
                 limpiarContenido(), 30000;
                 cuenta = cuenta + 1;
                 limpiar();
@@ -667,16 +628,11 @@
                                                 ${Nombre} ${ApellidoPaterno} ${ApellidoMaterno}
                                                 <img id="avatar2-2" width="20%" src="">
                                                 </h4>
-                                                Tu Avatar es:
-                                            <a href="#" class="nes-badge"> 
                                                <span class="is-dark ">
                                                 ${Avatar}</span>
-                                            </a>
                                         </center>
                                         
                                         <br> Tu Nombre de Usuario es: <a href="#" class="nes-badge"> <span class="is-dark">${Nick}</span></a>
-                                        <br> Tu Estilo de aprendizaje es: <a href="#" class="nes-badge"> <span class="is-dark">${VAK}</span></a>
-
                                         <br> Tu Nombre de Clan es: <a href="#" class="nes-badge"> <span class="is-dark">${Equipo}</span></a>
                                         <br> Tu Grupo es: <a href="#" class="nes-badge"> <span class="is-dark">${Grupo}</span></a>
                                         <br><br> Tu ID es: <a href="#" class="nes-badge"> <span class="is-dark">${ID}</span></a> <br> 
@@ -790,10 +746,7 @@
                 Avatar: "Avatar",
                 Equipo: "Equipo",
                 Grupo: "Grupo",
-                ID: "ID",
-                Edad: "Edad",
-                Sexo: "Sexo",
-                VAK: "VAK"
+                ID: "ID"
 
             };
 
@@ -809,10 +762,7 @@
                     Avatar: item.Avatar,
                     Equipo: item.Equipo,
                     Grupo: item.Grupo,
-                    ID: item.ID,
-                    Edad: item.Edad,
-                    Sexo: item.Sexo,
-                    VAK: item.VAK
+                    ID: item.ID
                 });
             });
             var fileTitle = 'lista';
