--- a/index.html
+++ b/index.html
@@ -913,6 +913,9 @@
                 "Nombre": "Esfinge"
             },
             {
+                "Nombre": "Fauno"
+            },
+            {
                 "Nombre": "Fénix"
             },
             {
@@ -940,10 +943,16 @@
                 "Nombre": "Hiena"
             },
             {
+                "Nombre": "Hipocampo"
+            },
+            {
                 "Nombre": "Jaguar"
             },
             {
                 "Nombre": "Jirafa"
+            },
+            {
+                "Nombre": "Kraken"
             },
             {
                 "Nombre": "Koala"
@@ -952,7 +961,13 @@
                 "Nombre": "Komodo"
             },
             {
+                "Nombre": "Lémur"
+            },
+            {
                 "Nombre": "León"
+            },
+            {
+                "Nombre": "Libélula"
             },
             {
                 "Nombre": "Lince"
@@ -962,6 +977,9 @@
             },
             {
                 "Nombre": "Mamut"
+            },
+            {
+                "Nombre": "Mantis"
             },
             {
                 "Nombre": "Mapache"
@@ -997,10 +1015,16 @@
                 "Nombre": "Pulpo"
             },
             {
+                "Nombre": "Quetzal"
+            },
+            {
                 "Nombre": "Raptor"
             },
             {
                 "Nombre": "Rinoceronte"
+            },
+            {
+                "Nombre": "Sirena"
             },
             {
                 "Nombre": "Tiburón"
