--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
             -ms-user-select: none;
             user-select: none;
         }
-        #qrcode{
-        max-width: 100%;
-  max-height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+        #qrcode {
+            max-width: 100%;
+            max-height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         @media (max-width: 600px) {
@@ -142,7 +143,7 @@
                             <br>
                             <label for="Sexo">Sexo:</label>
                             <div class="nes-select is-dark">
-                                <select id="Sexo" required >
+                                <select id="Sexo" required>
                                     <option value="" disabled selected>Escoge un tu sexo...</option>
                                     <option value="M">Masculino</option>
                                     <option value="F">Femenino</option>
@@ -598,7 +599,7 @@
                 "ID": ID,
                 "VAK": VAK,
                 "Edad": Edad,
-                "Sexo" : Sexo
+                "Sexo": Sexo
             };
             obj.items.push(obj1);
 
@@ -865,7 +866,13 @@
                 "Nombre": "Águila"
             },
             {
+                "Nombre": "Alicornio"
+            },
+            {
                 "Nombre": "Araña"
+            },
+            {
+                "Nombre": "Ardilla"
             },
             {
                 "Nombre": "Bisonte"
@@ -881,6 +888,9 @@
             },
             {
                 "Nombre": "Castor"
+            },
+            {
+                "Nombre": "CasCebrator"
             },
             {
                 "Nombre": "Cerdo"
@@ -919,6 +929,9 @@
                 "Nombre": "Fénix"
             },
             {
+                "Nombre": "Flamenco"
+            },
+            {
                 "Nombre": "Foca"
             },
             {
@@ -940,10 +953,16 @@
                 "Nombre": "Hámster"
             },
             {
+                "Nombre": "Harpia"
+            },
+            {
                 "Nombre": "Hiena"
             },
             {
                 "Nombre": "Hipocampo"
+            },
+            {
+                "Nombre": "Hydra"
             },
             {
                 "Nombre": "Jaguar"
@@ -985,6 +1004,18 @@
                 "Nombre": "Mapache"
             },
             {
+                "Nombre": "Medusa"
+            },
+            {
+                "Nombre": "Minotauro"
+            },
+            {
+                "Nombre": "Murciélago"
+            },
+            {
+                "Nombre": "Nutria"
+            },
+            {
                 "Nombre": "Orca"
             },
             {
@@ -1010,6 +1041,9 @@
             },
             {
                 "Nombre": "Perro"
+            },
+            {
+                "Nombre": "Pingüino"
             },
             {
                 "Nombre": "Pulpo"
