--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
                 "Nombre": "Castor"
             },
             {
-                "Nombre": "CasCebrator"
+                "Nombre": "Cebra"
             },
             {
                 "Nombre": "Cerdo"
